JBTM-1397 wsat-jta-multi_service quickstart is not tested in CI

--- a/TXBridge/pom.xml
+++ b/TXBridge/pom.xml
@@ -13,6 +13,7 @@
     <modules>
         <module>demo</module>
         <module>wsat-jta-multi_hop</module>
+        <module>wsat-jta-multi_service</module>
     </modules>
 
 </project>
