--- a/TXBridge/wsat-jta-multi_service/pom.xml
+++ b/TXBridge/wsat-jta-multi_service/pom.xml
@@ -3,8 +3,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.jboss.narayana.quickstart.txbridge.wsat-jta-multi_hop</groupId>
-    <artifactId>wsat-jta-multi_hop-all</artifactId>
+    <groupId>org.jboss.narayana.quickstart.txbridge.wsat-jta-multi_service</groupId>
+    <artifactId>wsat-jta-multi_service-all</artifactId>
     <version>5.0.0.M2-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>JBoss Narayana Quickstarts: Simple WS-AT Web service, bridged to and from JTA. Bridges three servers</name>
@@ -162,7 +162,7 @@
     <build>
         <!-- Set the name of the jar, used as the context root when the app is
               deployed -->
-        <finalName>wsat-jta-multi_hop</finalName>
+        <finalName>wsat-jta-multi_service</finalName>
         <plugins>
             <plugin>
                 <groupId>org.jboss.as.plugins</groupId>
