JBTM-1413 Integrate txframework quickstarts into main quickstarts pom.xml

--- a/TXFramework/wsba-participant-completion-simple/pom.xml
+++ b/TXFramework/wsba-participant-completion-simple/pom.xml
@@ -160,7 +160,7 @@
             <!-- Run with: mvn clean test -->
             <id>arq-jbossas-managed</id>
             <activation>
-                <activeByDefault>false</activeByDefault>
+                <activeByDefault>true</activeByDefault>
             </activation>
             <dependencies>
                 <dependency>
