--- a/pom.xml
+++ b/pom.xml
@@ -133,5 +133,6 @@
     <!-- Currently depends on the XTS demo -->
     <module>TXBridge</module>
     <module>fileio</module>
+    <module>TXFramework</module>
   </modules>
 </project>
