--- a/TXFramework/restat-simple/pom.xml
+++ b/TXFramework/restat-simple/pom.xml
@@ -209,7 +209,7 @@
             <!-- Run with: mvn clean test -->
             <id>arq-jbossas-managed</id>
             <activation>
-                <activeByDefault>false</activeByDefault>
+                <activeByDefault>true</activeByDefault>
             </activation>
             <dependencies>
                 <dependency>
