--- a/TXFramework/wsat-jta-bridge/pom.xml
+++ b/TXFramework/wsat-jta-bridge/pom.xml
@@ -214,7 +214,7 @@
             <!-- Run with: mvn clean test -->
             <id>arq-jbossas-managed</id>
             <activation>
-                <activeByDefault>false</activeByDefault>
+                <activeByDefault>true</activeByDefault>
             </activation>
             <dependencies>
                 <dependency>
