--- a/rest-tx/service/pom.xml
+++ b/rest-tx/service/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <artifactId>quickstarts</artifactId>
     <groupId>org.jboss.narayana.quickstart.rts</groupId>
-    <version>5.0.0.M2-SNAPSHOT</version>
+    <version>5.0.0.M2</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>service</artifactId>
@@ -57,7 +57,7 @@
     <dependency>
       <groupId>org.jboss.narayana.rts</groupId>
       <artifactId>restat-util</artifactId>
-      <version>5.0.0.M2-SNAPSHOT</version>
+      <version>5.0.0.M2</version>
     </dependency>
     <!-- Jersey container for running participant services -->
     <dependency>
