--- a/XTS/legacy-api-quickstarts/demo/webservices/pom.xml
+++ b/XTS/legacy-api-quickstarts/demo/webservices/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.jboss.narayana.quickstarts.xts.demo</groupId>
         <artifactId>xts-demo-all</artifactId>
-        <version>5.0.0.M2</version>
+        <version>5.0.0.M3-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
