--- a/XTS/wsba-simple/pom.xml
+++ b/XTS/wsba-simple/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>org.jboss.narayana.quickstart.xts.wsba-simple</groupId>
     <artifactId>wsba-simple-all</artifactId>
-    <version>5.0.0.M2</version>
+    <version>5.0.0.M3-SNAPSHOT</version>
     <packaging>war</packaging>
     <name>JBoss Narayana Quickstarts: A simple example of using compensation-based transactions with WS-BA</name>
     <description>JBoss Narayana Quickstarts: A simple example of using compensation-based transactions with WS-BA</description>
@@ -17,7 +17,7 @@
   resources, i.e. build is platform dependent! -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <jboss-as.version>8.0.0.Alpha1-SNAPSHOT</jboss-as.version>
-        <narayana.version>5.0.0.M2</narayana.version>
+        <narayana.version>5.0.0.M3-SNAPSHOT</narayana.version>
     </properties>
 
     <dependencyManagement>
