--- a/XTS/wsba-to-jta/pom.xml
+++ b/XTS/wsba-to-jta/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>org.jboss.narayana.quickstart.xts.wsba-jta</groupId>
     <artifactId>wsba-jta-all</artifactId>
-    <version>5.0.0.M2</version>
+    <version>5.0.0.M3-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>JBoss Narayana Quickstarts: WS-BA Web service backed by Database accessed in a JTA Transaction</name>
     <description>JBoss Narayana Quickstarts: WS-BA Web service backed by Database accesed in a JTA Transaction</description>
@@ -17,7 +17,7 @@
   resources, i.e. build is platform dependent! -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <jboss-as.version>8.0.0.Alpha1-SNAPSHOT</jboss-as.version>
-        <narayana.version>5.0.0.M2</narayana.version>
+        <narayana.version>5.0.0.M3-SNAPSHOT</narayana.version>
     </properties>
 
     <dependencyManagement>
