--- a/XTS/jta-over-wsat/pom.xml
+++ b/XTS/jta-over-wsat/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>org.jboss.narayana.quickstart.xts.jta-over-wsat</groupId>
     <artifactId>jta-over-wsat-all</artifactId>
-    <version>5.0.0.M3-SNAPSHOT</version>
+    <version>5.0.0.M2</version>
     <packaging>jar</packaging>
     <name>JBoss Narayana Quickstarts: JTA distributed over WS-AT</name>
     <description>JBoss Narayana Quickstarts: JTA distributed over WS-AT</description>
@@ -17,7 +17,7 @@
   resources, i.e. build is platform dependent! -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <jboss-as.version>8.0.0.Alpha1-SNAPSHOT</jboss-as.version>
-        <narayana.version>5.0.0.M3-SNAPSHOT</narayana.version>
+        <narayana.version>5.0.0.M2</narayana.version>
     </properties>
 
     <!-- We add the JBoss repository as we need the JBoss AS connectors
