--- a/rest-tx/pom.xml
+++ b/rest-tx/pom.xml
@@ -19,7 +19,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.jboss.narayana.quickstart.rts</groupId>
   <artifactId>quickstarts</artifactId>
-  <version>5.0.0.M2</version>
+  <version>5.0.0.M2-SNAPSHOT</version>
   <name>RESTAT Quickstarts</name>
   <description>Provides examples of how to use transactions with web applications</description>
   <packaging>pom</packaging>
