JBTM-1479. JTA, IronJacamar, and Tomcat quickstart

--- a/pom.xml
+++ b/pom.xml
@@ -124,6 +124,7 @@
     <url>https://github.com/jbosstm/quickstart</url>
   </scm>
   <modules>
+    <module>jca-and-tomcat</module>
     <module>blacktie</module>
     <module>ArjunaCore</module>
     <module>ArjunaJTA</module>
