--- a/TXBridge/wsat-jta-multi_service/pom.xml
+++ b/TXBridge/wsat-jta-multi_service/pom.xml
@@ -16,8 +16,8 @@
         <!-- [WARNING] Using platform encoding (UTF-8 actually) to copy filtered
   resources, i.e. build is platform dependent! -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <jboss-as.version>7.2.0.Alpha1-SNAPSHOT</jboss-as.version>
-        <narayana.version>5.0.0.M2-SNAPSHOT</narayana.version>
+        <jboss-as.version>7.2.0.Final</jboss-as.version>
+        <narayana.version>5.0.0.M2</narayana.version>
     </properties>
 
     <!-- We add the JBoss repository as we need the JBoss AS connectors
