--- a/TXBridge/wsat-jta-multi_hop/pom.xml
+++ b/TXBridge/wsat-jta-multi_hop/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>org.jboss.narayana.quickstart.txbridge.wsat-jta-multi_hop</groupId>
     <artifactId>wsat-jta-multi_hop-all</artifactId>
-    <version>5.0.0.M2-SNAPSHOT</version>
+    <version>4.17.4.Final-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>JBoss Narayana Quickstarts: Simple WS-AT Web service, bridged to and from JTA. Bridges three servers</name>
     <description>Boss Narayana Quickstarts: Simple WS-AT Web service, bridged to and from JTA. Bridges three servers</description>
@@ -17,7 +17,7 @@
              resources, i.e. build is platform dependent! -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <jboss-as.version>7.2.0.Final</jboss-as.version>
-        <narayana.version>5.0.0.M2</narayana.version>
+        <narayana.version>4.17.4.Final-SNAPSHOT</narayana.version>
 
         <jvm.args.ip></jvm.args.ip>
         <node0>127.0.0.1</node0>
@@ -81,7 +81,7 @@
     <dependencies>
         <!-- The XTS api needed to use WS-AT -->
         <dependency>
-            <groupId>org.jboss.narayana.xts</groupId>
+            <groupId>org.jboss.jbossts.xts</groupId>
             <artifactId>jbossxts</artifactId>
             <classifier>api</classifier>
             <version>${narayana.version}</version>
@@ -96,7 +96,7 @@
 
         <!-- The TXBridge needed to bridge between WS-AT and JTA transactions -->
         <dependency>
-            <groupId>org.jboss.narayana</groupId>
+            <groupId>org.jboss.jbossts</groupId>
             <artifactId>jbosstxbridge</artifactId>
             <version>${narayana.version}</version>
             <scope>provided</scope>
