--- a/TXBridge/pom.xml
+++ b/TXBridge/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>org.jboss.jbossts</groupId>
     <artifactId>jbosstxbridge</artifactId>
-    <version>4.17.4.Final-SNAPSHOT</version>
+    <version>4.17.4.Final</version>
     <name>${project.artifactId}</name>
     <description>${project.artifactId}</description>
     <packaging>pom</packaging>
