--- a/XTS/jta-over-wsat/pom.xml
+++ b/XTS/jta-over-wsat/pom.xml
@@ -211,8 +211,8 @@
             </activation>
             <dependencies>
                 <dependency>
-                    <groupId>org.jboss.as</groupId>
-                    <artifactId>jboss-as-arquillian-container-managed</artifactId>
+                    <groupId>org.wildfly</groupId>
+                    <artifactId>wildfly-arquillian-container-managed</artifactId>
                     <version>${jboss-as.version}</version>
                     <scope>test</scope>
                 </dependency>
@@ -243,8 +243,8 @@
             <id>arq-jbossas-remote</id>
             <dependencies>
                 <dependency>
-                    <groupId>org.jboss.as</groupId>
-                    <artifactId>jboss-as-arquillian-container-remote</artifactId>
+                    <groupId>org.wildfly</groupId>
+                    <artifactId>wildfly-arquillian-container-remote</artifactId>
                     <version>${jboss-as.version}</version>
                     <scope>test</scope>
                 </dependency>
