--- a/XTS/legacy-api-quickstarts/demo/test/pom.xml
+++ b/XTS/legacy-api-quickstarts/demo/test/pom.xml
@@ -65,8 +65,8 @@
             </dependency>
             <!-- Running with managed container -->
             <dependency>
-                <groupId>org.jboss.as</groupId>
-                <artifactId>jboss-as-arquillian-container-managed</artifactId>
+                <groupId>org.wildfly</groupId>
+                <artifactId>wildfly-arquillian-container-managed</artifactId>
                 <version>${version.jbossas}</version>
             </dependency>
             
@@ -232,8 +232,8 @@
             </activation>
             <dependencies>
                 <dependency>
-                    <groupId>org.jboss.as</groupId>
-                    <artifactId>jboss-as-arquillian-container-managed</artifactId>
+                    <groupId>org.wildfly</groupId>
+                    <artifactId>wildfly-arquillian-container-managed</artifactId>
                     <version>${version.jbossas}</version>
                     <scope>test</scope>
                 </dependency>
@@ -248,8 +248,8 @@
             <id>arq-jbossas-remote</id>
             <dependencies>
                 <dependency>
-                    <groupId>org.jboss.as</groupId>
-                    <artifactId>jboss-as-arquillian-container-remote</artifactId>
+                    <groupId>org.wildfly</groupId>
+                    <artifactId>wildfly-arquillian-container-remote</artifactId>
                     <version>${version.jbossas}</version>
                     <scope>test</scope>
                 </dependency>
