--- a/blacktie/integration1/xatmi_adapter/pom.xml
+++ b/blacktie/integration1/xatmi_adapter/pom.xml
@@ -19,7 +19,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.jboss.narayana.blacktie.quickstarts</groupId>
     <artifactId>blacktie-quickstarts-integration1-xatmi_adapter</artifactId>
-    <version>5.0.0.M3-SNAPSHOT</version>
+    <version>5.0.0.M3</version>
     <packaging>jar</packaging>
     <name>Integration 1 - Quickstart XATMI Adapter</name>
     <description>A BlackTie component</description>
@@ -120,7 +120,7 @@
         <dependency>
             <groupId>org.jboss.narayana.blacktie.quickstarts</groupId>
             <artifactId>blacktie-quickstarts-integration1-ejb</artifactId>
-            <version>5.0.0.M3-SNAPSHOT</version>
+            <version>5.0.0.M3</version>
             <classifier>client</classifier>
         </dependency>
         <dependency>
@@ -138,7 +138,7 @@
         <dependency>
             <groupId>org.jboss.narayana.blacktie</groupId>
             <artifactId>blacktie-jatmibroker-xatmi</artifactId>
-            <version>5.0.0.M3-SNAPSHOT</version>
+            <version>5.0.0.M3</version>
         </dependency>
         <dependency>
             <groupId>log4j</groupId>
