--- a/rest-tx/restat-simple/pom.xml
+++ b/rest-tx/restat-simple/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>org.jboss.narayana.quickstart.rts.restat-simple</groupId>
     <artifactId>restat-simple-all</artifactId>
-    <version>5.0.0.M3</version>
+    <version>5.0.0.M4-SNAPSHOT</version>
     <packaging>war</packaging>
     <name>JBoss Narayana Quickstarts: Simple REST-AT Web service</name>
     <description>JBoss Narayana Quickstarts: Simple REST-AT Web service</description>
@@ -17,7 +17,7 @@
   resources, i.e. build is platform dependent! -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <jboss-as.version>8.0.0.Alpha2-SNAPSHOT</jboss-as.version>
-        <narayana.version>5.0.0.M3</narayana.version>
+        <narayana.version>5.0.0.M4-SNAPSHOT</narayana.version>
     </properties>
 
     <!-- We add the JBoss repository as we need the JBoss AS connectors
