[JBTM-1722] include examples that use the integration API

--- a/rest-tx/simple/pom.xml
+++ b/rest-tx/simple/pom.xml
@@ -16,13 +16,8 @@
 	02110-1301, USA.
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <parent>
-    <groupId>org.jboss.narayana.quickstart.rts</groupId>
-    <artifactId>quickstarts</artifactId>
-    <version>5.0.0.M4-SNAPSHOT</version>
-    <relativePath>../pom.xml</relativePath>
-  </parent>
   <modelVersion>4.0.0</modelVersion>
+  <groupId>org.jboss.narayana.quickstart.rts</groupId>
   <artifactId>simple</artifactId>
   <version>5.0.0.M4-SNAPSHOT</version>
   <name>RESTAT Quickstart: Basic</name>
@@ -50,10 +45,12 @@
           <executable>java</executable>
           <workingDirectory>${project.build.directory}/exec-working-directory</workingDirectory>
           <arguments>
+            <!--argument>-Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=8788</argument-->
             <argument>-classpath</argument>
             <classpath/>
-            <argument>RestTransactionExample</argument>
             <argument>MultipleTransactions</argument>
+            <!--argument>RestTransactionExample</argument-->
+            <argument>coordinator=http://localhost:8080/rest-at-coordinator/tx/transaction-manager</argument>
           </arguments>
         </configuration>
       </plugin>
@@ -64,6 +61,12 @@
       <groupId>org.jboss.narayana.rts</groupId>
       <artifactId>restat-util</artifactId>
       <version>5.0.0.M4-SNAPSHOT</version>
+    </dependency>
+    <!-- JBoss logging -->
+    <dependency>
+      <groupId>org.jboss.logging</groupId>
+      <artifactId>jboss-logging</artifactId>
+      <version>3.1.0.GA</version>
     </dependency>
   </dependencies>
 </project>
