--- a/ArjunaJTA/recovery/pom.xml
+++ b/ArjunaJTA/recovery/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.jboss.jbossts.quickstart.jta</groupId>
     <artifactId>quickstarts</artifactId>
-    <version>4.17.5.Final</version>
+    <version>4.17.6-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <description>Recovery example
