--- a/ArjunaJTS/recovery/pom.xml
+++ b/ArjunaJTS/recovery/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.jboss.jbossts.quickstart.jts</groupId>
     <artifactId>narayana-quickstarts-jts</artifactId>
-    <version>4.17.6-SNAPSHOT</version>
+    <version>4.17.6.Final-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <description>
