--- a/ArjunaJTS/trailmap/pom.xml
+++ b/ArjunaJTS/trailmap/pom.xml
@@ -15,7 +15,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.jboss.jbossts.jts.quickstart</groupId>
     <artifactId>narayana-jts-quickstart-trailmap</artifactId>
-    <version>4.17.6-SNAPSHOT</version>
+    <version>4.17.6.Final-SNAPSHOT</version>
     <name>${project.artifactId}</name>
     <description>${project.artifactId}</description>
     <packaging>jar</packaging>
@@ -50,7 +50,7 @@
         <dependency>
             <groupId>org.jboss.jbossts.jts</groupId>
             <artifactId>jbossjts-jacorb</artifactId>
-            <version>4.17.6-SNAPSHOT</version>
+            <version>4.17.6.Final-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.jboss.spec.javax.transaction</groupId>
