--- a/rts/pom.xml
+++ b/rts/pom.xml
@@ -18,9 +18,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.jboss.narayana.quickstart.rts</groupId>
-  <artifactId>quickstarts</artifactId>
+  <artifactId>rest-tx-quickstarts</artifactId>
   <version>5.0.0.M4-SNAPSHOT</version>
-  <name>RESTAT Quickstarts</name>
+  <name>RESTTX Quickstarts</name>
   <description>Provides examples of how to use transactions with web applications</description>
   <packaging>pom</packaging>
   <repositories>
@@ -36,38 +36,7 @@
       </snapshots>
     </repository>
   </repositories>
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-deploy-plugin</artifactId>
-        <version>2.6</version>
-        <configuration>
-          <skip>true</skip>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>2.3.2</version>
-        <configuration>
-          <source>1.6</source>
-          <target>1.6</target>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
-  <dependencies>
-    <dependency>
-      <groupId>org.jboss.logging</groupId>
-      <artifactId>jboss-logging-logmanager</artifactId>
-      <version>2.2.0.CR2</version>
-    </dependency>
-  </dependencies>
   <modules>
-    <module>simple</module>
-    <module>service</module>
-    <module>recovery</module>
-    <module>restat-simple</module>
+    <module>at</module>
   </modules>
 </project>
