--- a/at/integration/pom.xml
+++ b/at/integration/pom.xml
@@ -209,6 +209,24 @@
                             </includes>
                         </configuration>
                     </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-dependency-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>copy-dependencies</id>
+                                <phase>test-compile</phase>
+                                <goals>
+                                    <goal>copy-dependencies</goal>
+                                </goals>
+                                <configuration>
+                                    <stripVersion>true</stripVersion>
+                                    <includeGroupIds>org.jboss.byteman</includeGroupIds>
+									<outputDirectory>${project.build.directory}/test-classes/lib</outputDirectory>
+                                </configuration>
+                           </execution>
+                        </executions>
+                    </plugin>
                 </plugins>
             </build>
         </profile>
