--- a/at/pom.xml
+++ b/at/pom.xml
@@ -68,5 +68,6 @@ Software Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA
     <module>tx</module>
     <module>webservice</module>
     <module>integration</module>
+    <module>bridge</module>
   </modules>
 </project>
