JBTM-1750. JPA and JMS quickstarts.

--- a/rts/at/pom.xml
+++ b/rts/at/pom.xml
@@ -69,5 +69,6 @@
     <module>service</module>
     <module>recovery</module>
     <module>restat-simple</module>
+    <module>bridge</module>
   </modules>
 </project>
