--- a/rts/at/service/pom.xml
+++ b/rts/at/service/pom.xml
@@ -25,6 +25,8 @@
   <packaging>pom</packaging>
   <modules>
     <module>service1</module>
+    <module>service1b</module>
     <module>service2</module>
+    <module>service2b</module>
   </modules>
 </project>
