--- a/rts/at/simple/pom.xml
+++ b/rts/at/simple/pom.xml
@@ -43,13 +43,10 @@
         </executions>
         <configuration>
           <executable>java</executable>
+          <mainClass>MultipleTransactions</mainClass>
           <workingDirectory>${project.build.directory}/exec-working-directory</workingDirectory>
           <arguments>
             <!--argument>-Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=8788</argument-->
-            <argument>-classpath</argument>
-            <classpath/>
-            <argument>MultipleTransactions</argument>
-            <!--argument>RestTransactionExample</argument-->
             <argument>coordinator=http://localhost:8080/rest-at-coordinator/tx/transaction-manager</argument>
           </arguments>
         </configuration>
