--- a/rts/pom.xml
+++ b/rts/pom.xml
@@ -18,7 +18,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.jboss.narayana.quickstart.rts</groupId>
-  <artifactId>rest-tx-quickstarts</artifactId>
+  <artifactId>rts-quickstarts</artifactId>
   <version>5.0.0.M4-SNAPSHOT</version>
   <name>RESTTX Quickstarts</name>
   <description>Provides examples of how to use transactions with web applications</description>
