JBTM-1870 Create a travel-agent quickstart using compensations API

--- a/XTS/pom.xml
+++ b/XTS/pom.xml
@@ -27,5 +27,6 @@
     <module>wsba-to-jta</module>
     <module>wsba-simple</module>
     <module>non-transactional_resource</module>
+    <module>travel-agent</module>
   </modules>
 </project>
