--- a/blacktie/integration1/ejb/pom.xml
+++ b/blacktie/integration1/ejb/pom.xml
@@ -87,6 +87,7 @@
             </plugin>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.1</version>
                 <configuration>
                     <source>1.5</source>
                     <target>1.5</target>
