--- a/blacktie/jatmibroker-xatmi/mdb-xatmi-service/pom.xml
+++ b/blacktie/jatmibroker-xatmi/mdb-xatmi-service/pom.xml
@@ -46,6 +46,7 @@
 			</plugin>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
+                <version>3.1</version>
 				<configuration>
 					<source>1.5</source>
 					<target>1.5</target>
