--- a/at/bridge/pom.xml
+++ b/at/bridge/pom.xml
@@ -164,6 +164,14 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+              <inherited>false</inherited>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-deploy-plugin</artifactId>
+              <configuration>
+                <skip>false</skip>
+              </configuration>
+            </plugin>
         </plugins>
     </build>
 
